--- a/tests/data.yaml
+++ b/tests/data.yaml
@@ -14,3 +14,12 @@ requests.get:
     response:
       content: "Mocked query"
       status_code: 200
+
+testjsonable:
+  - args: []
+    response:
+    - a: 1
+      b: 2
+    - a: 3
+      b: 4
+    - [1,2,3]
